# amr

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  run_integration_test.py
.github/scripts/: weekly_pulse.py
.github/workflows/: pipeline-drift-detector.yml  weekly-pulse.yml
docs/: token-issuance-prompt.md  token-issuance-spec.md
outreach/: 2026-W19_radar.md  W20_radar.md  pipeline.md
outreach/drafts/: 2026-04-21_houles.md  2026-04-21_mattioli.md  2026-04-21_stefanini.md  2026-04-22_rice.md  2026-04-22_rogers.md  2026-04-22_zappellini.md
outreach/radar/: 2026-04-27_W18.md
outreach/tracker-log/: 2026-04-29.md
outreach/tracker-logs/: 2026-05-16.md
outreach/tracker-runs/: 2026-04-25.md  2026-05-07.md  2026-05-09.md
src/amr/: __init__.py  config.py  server.py
src/amr/crypto/: __init__.py  chain.py  signing.py
src/amr/db/: __init__.py  engine.py
src/amr/models/: __init__.py  mandate.py  token.py
src/amr/proof/: __init__.py
src/amr/tools/: __init__.py  create_mandate.py  get_proof.py  issue_action_token.py  log_action.py  verify_mandate.py
tests/: __init__.py  _helpers.py  conftest.py  test_create_mandate.py  test_crypto.py  test_integration_token_flow.py  test_issue_action_token.py  test_issued_tokens_db.py  test_log_and_proof.py  test_signing.py  test_token_models.py  test_verify_mandate.py
