[project]
name = "amr"
version = "0.1.0"
description = "Agent Mandate Registry - Legal mandate chain for AI agents. MCP server."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "Audric Bugnard" }]
keywords = ["mcp", "ai-agents", "mandate", "compliance", "ai-act", "eidas"]
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
amr = "amr.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amr"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert statements are expected in pytest test files

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
